--- a/Predicting Stock Price Using Neural Networs.ipynb
+++ b/Predicting Stock Price Using Neural Networs.ipynb
@@ -20,7 +20,7 @@
     "# 3) 3 previous periods used to predict the price for the next period.\n",
     "\n",
     "\n",
-    "# P.S. Even the original paper spposed to have a code - i was not able to find one (the attached code was wrong). More sad, i was not even abele to find the original stock data.\n"
+    "# P.S. Even the original paper supposed to have a code - i was not able to find one (the attached code was wrong). More sad, i was not even able to find the original stock data.\n"
    ]
   },
   {
@@ -6652,7 +6652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I was not able to obtain the same results as in the original article. Especially I was surprised that Neural Networks, especially sopisticated ones were not able to predict better than simple linear model. In the original article the NNs were able to predict the prise with outstanding precision (MAPE was no more than 5% in the worst case). In my case simple linear regression gave a MAPE about 3%, while NNs gave significantly poorer level of precision. I suppose that graphs of the stock prices ca explain why: Microsoft stock data looks like exponential function, while other stock prices plots looks more like some random process (like white noice or random walk), thus it is difficult for NN to learn from such a data."
+    "# I was not able to obtain the same results as in the original article. Especially I was surprised that Neural Networks (especially sophisticated ones) were not able to predict better than simple linear model. In the original article the NNs were able to predict the price with outstanding precision (MAPE was no more than 5% in the worst case). In my case simple linear regression gave a MAPE about 3%, while NNs gave significantly poorer level of precision. I suppose that graphs of the stock prices can explain why: Microsoft stock data looks like exponential function, while other stock prices plots look more like some random process (like white noice or random walk), thus it is difficult for NN to learn from such a data."
    ]
   },
   {
